Fixed dark mode

--- a/about.css
+++ b/about.css
@@ -3,27 +3,39 @@ body {
 	background-image: url("graphics/main_texture_black.jpg");
 	background-repeat: repeat;
 }
+
 .dark-mode {
     background-color: white;
-    background-image: url("../graphics/main_texture.jpg");
+    background-image: url("graphics/main_texture.jpg");
     background-repeat: repeat;
-    overflow: hidden;
+}
+
+.section-dark-mode {
+	background-image: url("graphics/main_texture_black.jpg");
+
+}
+
+.textbox-dark-mode {
+	background-color: rgba(0, 0, 0, 0.5) !important;
+	color: white;
+}
+
+.fixed-bottom {
+	left: 96%;
 }
 
 .access {
-	position: absolute;
 	padding: 0;
 	border: none;
 	background-color: transparent;
 	cursor: pointer;
-	bottom: 30px;
-	right: 20px;
 }
 
-.menu {
-	margin-left: auto;
-	margin-right: auto;
+.hotbar {
+	margin: auto;
+	text-align: center;
 	height: 35vh;
+	width: 40vw;
 }
 
 section {
